content.css
button.jsh-modal-toggle {
    border: none;
    border-radius: 3px;
    width: 40px;
    height: 40px;
    margin: 80px 10px 10px;
    padding: 0;
    background-color: white;
    /* background-image: url('icons/icon.svg'); */
    box-shadow: 0 0 0 2px rgba(0,0,0,0.1);
    cursor: pointer;
    pointer-events: auto;
}

@media (max-width: 800px) {
    button.jsh-modal-toggle {
        margin: 10px;
    }
}

.jsh-modal {
    display: none;
}
.jsh-modal.active {
    display: block;
    position: fixed;
    z-index: 200;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.75);
}
.jsh-modal-dialog {
    background: white;
    border-radius: 4px;
    box-shadow: 0 0 5px 5px rgba(0,0,0,0.2);
    max-width: 600px;
    margin: 200px auto;
    padding: 20px;
}
.jsh-modal-dialog code {
    background-color: lightgray;
    border-radius: 3px;
    padding: 10px 50px 10px 10px;
    display: block;
    position: relative;
    margin-bottom: 7px;
}
.jsh-modal-dialog pre {
    margin: 0;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
}
.jsh-modal-dialog .copy-button {
    position: absolute;
    right: 8px;
    top: 8px;
    background-color: transparent;
}
.jsh-modal-dialog > .modal-header {
    margin-top: 0px;
}

.jsh-modal-dialog a.btn {
    margin-right: 4px;
    padding: 10px 20px;
    line-height: 2;
    border: 1px solid #E7E7E7;
    border-radius: 5px;
    color: #000;
    font-weight: bold;
}
.jsh-modal-dialog a.btn:visited {
    color: #000;
}
.jsh-modal-dialog a.btn:hover {
    background-color: #F0F0F0;
    text-decoration: none;
}

.jsh-modal-dialog .btn.active {
    background-color: #f0f0f5;
}

